--- a/index.html
+++ b/index.html
@@ -3,40 +3,93 @@
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>監視器時間自動換算工具</title>
     <style>
-        body { font-family: Arial, sans-serif; padding: 20px; background-color: #f4f4f4; }
-        label { display: block; margin-top: 10px; }
-        input { padding: 5px; margin-top: 5px; width: 180px; }
-        .result { margin-top: 20px; font-size: 1.2em; color: #222; }
+        body {
+            font-family: "Segoe UI", sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f3f4f6;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+        .container {
+            background: white;
+            padding: 24px;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+            width: 90%;
+        }
+        h2 {
+            margin-top: 0;
+            font-size: 1.5em;
+            color: #111827;
+            text-align: center;
+        }
+        label {
+            display: block;
+            margin-top: 16px;
+            color: #374151;
+            font-weight: 500;
+        }
+        input[type="text"] {
+            width: 100%;
+            padding: 10px;
+            font-size: 1em;
+            margin-top: 6px;
+            border: 1px solid #d1d5db;
+            border-radius: 6px;
+            background-color: #f9fafb;
+        }
+        .result {
+            margin-top: 24px;
+            font-size: 1.2em;
+            font-weight: bold;
+            color: #1f2937;
+            text-align: center;
+        }
+        @media (max-width: 500px) {
+            h2 { font-size: 1.3em; }
+            .result { font-size: 1em; }
+        }
     </style>
 </head>
 <body>
-    <h2>監視器時間自動換算工具</h2>
+    <div class="container">
+        <h2>監視器時間自動換算工具</h2>
 
-    <label>標準時間（實際時間）：
-        <input type="time" id="actualTime">
-    </label>
+        <label>標準時間（24小時制，格式 HH:mm）：
+            <input type="text" id="actualTime" placeholder="例如：14:25">
+        </label>
 
-    <label>監視器顯示時間：
-        <input type="time" id="cameraTime">
-    </label>
+        <label>監視器顯示時間（24小時制，格式 HH:mm）：
+            <input type="text" id="cameraTime" placeholder="例如：14:18">
+        </label>
 
-    <div class="result" id="resultText"></div>
+        <div class="result" id="resultText"></div>
+    </div>
 
     <script>
+        function isValidTimeFormat(t) {
+            return /^([01]\d|2[0-3]):[0-5]\d$/.test(t);
+        }
+
         function timeToSeconds(t) {
             const [h, m] = t.split(":").map(Number);
             return h * 3600 + m * 60;
         }
 
         function showDifference() {
-            const actual = document.getElementById("actualTime").value;
-            const camera = document.getElementById("cameraTime").value;
+            const actual = document.getElementById("actualTime").value.trim();
+            const camera = document.getElementById("cameraTime").value.trim();
             const result = document.getElementById("resultText");
 
-            if (!actual || !camera) {
-                result.textContent = "請輸入標準時間與監視器時間";
+            if (!isValidTimeFormat(actual) || !isValidTimeFormat(camera)) {
+                result.textContent = "請輸入正確格式（HH:mm，例如 08:30）";
                 return;
             }
 
